--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,18 @@ spring:
     url: jdbc:oracle:thin:@localhost:1521:xe
     username: mozip
     password: mozip1234
+  # Mail
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: {YOUR_GAMIL_ADDRESS}
+    password: {YOUR_GMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 server:
   port:
