--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,8 +8,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: {YOUR_GAMIL_ADDRESS}
-    password: {YOUR_GMAIL_PASSWORD}
+    username: chlwodud19970327@gmail.com
+    password: wpiavganhaqabkem
     properties:
       mail:
         smtp:
