--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,6 +31,6 @@ server:
       enabled: true
       max-file-size: 2MB
 
-# TODO : 이미지 저장 경로 /upload 왼쪽 경로는 각자 Local 프로젝트 경로를 적어줘야 한다.
+# TODO : 이미지 저장 경로 /upload 왼쪽 경로는 각자 경로를 적어줘야 한다.
 file:
-  path: /Users/jaeyoung/Desktop/workspaces/mozip/mozip/upload/
+  path: /Users/jaeyoung/Desktop/upload/
