--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,17 +1,17 @@
 spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: ${secrets.datasource.url}
-    #    url: ${secrets.datasource.url}
-    username: ${secrets.datasource.username}
-    password: ${secrets.datasource.password}
-#    password: ${secrets.datasource.password}
+    url: jdbc:oracle:thin:@localhost:1521:XE
+    # url: ${secrets.datasource.url}
+    username: mozip
+    password: mozip1234
+  # password: ${secrets.datasource.password}
   # Mail
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${secrets.mail.username}
-    password: ${secrets.mail.password}
+    username: chlwodud19970327@gmail.com
+    password: wpiavganhaqabkem
     properties:
       mail:
         smtp:
@@ -34,4 +34,4 @@ server:
 
 # TODO : 이미지 저장 경로 /upload 왼쪽 경로는 각자 경로를 적어줘야 한다.
 file:
-  path: ${secrets.file.path}
+  path: /Users/yoonji/git/pj-img/
