--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,8 +28,7 @@ spring:
               - profile_nickname
               - profile_image
             authorization-grant-type: authorization_code
-#            redirect-uri: http://localhost:8082/login/oauth2/code/kakao # 개발용
-            redirect-uri: http://52.78.114.31:8082/login/oauth2/code/kakao # 배포용
+            redirect-uri: ${secrets.registration.kakao.redirect-uri}
             client-name: Kakao
             client-authentication-method: client_secret_post
         provider:
